feat: summary when all responds

--- a/src/templates/daily_summary.ejs
+++ b/src/templates/daily_summary.ejs
@@ -42,7 +42,7 @@
   <div class="container">
     <h2>Resumo da Daily - <%= projectName %></h2>
 
-    <p>Olá <%= name %>, Segue o resumo das respostas da sua equipe para o dia de hoje:</p>
+    <p>Olá <%= name %>, Segue o resumo das respostas da sua equipe do dia <%= date %>:</p>
 
     <% responses.forEach(function(response) { %>
       <div class="response-item">
