feat: tenant and password

--- a/src/templates/reset_password.ejs
+++ b/src/templates/reset_password.ejs
@@ -41,13 +41,13 @@
 </head>
 <body>
     <div class="container">
-        <h2>Convite para se juntar à nossa plataforma</h2>
+        <h2>Recuperação de senha</h2>
         <p>Olá <%= email %>,</p>
-        <p>Você recebeu um convite para se juntar à nossa plataforma.</p>
-        <p>Clique no botão abaixo para aceitar o convite:</p>
-        <a class="button" href="<%= acceptUrl %>">Aceitar Convite</a>
+        <p>Para recuperar a senha, clique no botão abaixo, ou copie o link no seu navegador.</p>
+        <p>Se não foi você que solicitou a troca de senha, ignore esse email.</p>
+        <a class="button" href="<%= changeUrl %>">Trocar Senha</a>
         <p>Se o botão não funcionar, copie e cole o seguinte link em seu navegador:</p>
-        <p><%= acceptUrl %></p>
+        <p><%= changeUrl %></p>
         <p>Obrigado!</p>
         <p>Equipe da ScrumEase</p>
     </div>
